add header skeleton

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <title>Tours | Exciting tours for normal people</title>
     </head>
     <body>
-        
+        <header class="header"></header>
         
     </body>
 </html>
