--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
         <title>Tours | Exciting tours for normal people</title>
     </head>
     <body>
-        <header class="header"></header>
-        
+        <header class="header">
+            <div class="logo-container"><img src="./img/logo-white.png" alt="logo" class="logo-image"></div>
+            <div class="title-container">
+                <h1 class="main-title">
+                    <span class="title-big">OUTDOORS</span>
+                    <span class="title-small">where the life expands</span>
+                </h1>  
+                <a href="#" class="btn btn-white">Discover</a> 
+            </div>
+        </header>
     </body>
 </html>
