--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <span class="title-big">OUTDOORS</span>
                     <span class="title-small">where the life expands</span>
                 </h1>  
-                <a href="#" class="btn btn-white">Discover</a> 
+                <a href="#" class="btn btn-white btn-animated">Discover</a> 
             </div>
         </header>
     </body>
