--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     </head>
     <body>
         <header class="header">
-            <div class="logo-container"><img src="./img/logo-white.png" alt="logo" class="logo-image"></div>
-            <div class="title-container">
+            <div class="header__logo-container">
+                <img src="./img/logo-white.png" alt="logo" class="header__logo-image">
+            </div>
+            <div class="header__title-container">
                 <h1 class="main-title">
-                    <span class="title-big">OUTDOORS</span>
-                    <span class="title-small">where the life expands</span>
+                    <span class="main-title--main">OUTDOORS</span>
+                    <span class="main-title--sub">where the life expands</span>
                 </h1>  
-                <a href="#" class="btn btn-white btn-animated">Discover</a> 
+                <a href="#" class="btn btn--white btn--animated">Discover</a> 
             </div>
         </header>
     </body>
