--- a/index.html
+++ b/index.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="stylesheet" href="css/icon-font.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
-        
-        <title>Tours | Exciting tours for normal people</title>
-    </head>
-    <body>
-        <header class="header">
-            <div class="header__logo-container">
-                <img src="./img/logo-white.png" alt="logo" class="header__logo-image">
-            </div>
-            <div class="header__title-container">
-                <h1 class="main-title">
-                    <span class="main-title--main">OUTDOORS</span>
-                    <span class="main-title--sub">where the life expands</span>
-                </h1>  
-                <a href="#" class="btn btn--white btn--animated">Discover</a> 
-            </div>
-        </header>
-    </body>
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="css/icon-font.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+
+    <title>Tours | Exciting tours for normal people</title>
+  </head>
+  <body>
+    <header class="header">
+      <div class="header__logo-container">
+        <img src="./img/logo-white.png" alt="logo" class="header__logo-image" />
+      </div>
+      <div class="header__title-container">
+        <h1 class="main-title">
+          <span class="main-title--main">OUTDOORS</span>
+          <span class="main-title--sub">where the life expands</span>
+        </h1>
+        <a href="#" class="btn btn--white btn--animated">Discover</a>
+      </div>
+    </header>
+    <main class="main-section">
+      <section class="section-about">
+        <div class="text-centered margin-bottom-8">
+          <h2 class="secondary-title">Exciting tours for adventurous people</h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">text</div>
+          <div class="col-1-of-2">images</div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
