--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
@@ -30,12 +29,87 @@
     </header>
     <main class="main-section">
       <section class="section-about">
-        <div class="text-centered margin-bottom-8">
+        <div class="text-centered margin-bottom-large">
           <h2 class="secondary-title">Exciting tours for adventurous people</h2>
         </div>
         <div class="row">
-          <div class="col-1-of-2">text</div>
-          <div class="col-1-of-2">images</div>
+          <div class="col-1-of-2">
+            <h3 class="tertiary-title">You're going to fall in love with nature</h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <h3 class="tertiary-title">Live adventures like you have never before</h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
+            </p>
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
+          <div class="col-1-of-2">
+            <div class="image-collage">
+              <img
+                src="./img/nat-1-large.jpg"
+                alt="nature_1"
+                class="image-collage__image image-collage__image--i1"
+              />
+              <img
+                src="./img/nat-2-large.jpg"
+                alt="nature_2"
+                class="image-collage__image image-collage__image--i2"
+              />
+              <img
+                src="./img/nat-3-large.jpg"
+                alt="nature_3"
+                class="image-collage__image image-collage__image--i3"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="tertiary-title">Explore the world</h3>
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut .
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="tertiary-title">Meet nature</h3>
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut .
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="tertiary-title">Find your way</h3>
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut .
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="tertiary-title">Life a heltier life</h3>
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut .
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
