--- a/index.html
+++ b/index.html
@@ -112,6 +112,22 @@
           </div>
         </div>
       </section>
+      <section class="section-tours">
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">FRONT</div>
+              <div class="card__side card__side--back">BACK</div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">card 2</div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">card 3</div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
