--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      href="https://fonts.googleapis.com/css?family=Lato:100,200,300,400,700,900"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/icon-font.css" />
@@ -116,16 +116,95 @@
         <div class="row">
           <div class="col-1-of-3">
             <div class="card">
-              <div class="card__side card__side--front">FRONT</div>
-              <div class="card__side card__side--back">BACK</div>
+              <div class="card__side card__side--front card__side--front--1">
+                <div class="card__header-image card__header-image--1"></div>
+                <h4 class="card__header-title">
+                  <span class="card__header-span card__header-span--1">The sea explorer</span>
+                </h4>
+                <div class="card__description">
+                  <ul>
+                    <li>2 day tour</li>
+                    <li>Up to 30 people</li>
+                    <li>2 tour guides</li>
+                    <li>Sleep in cozy hotels</li>
+                    <li>Difficulty: very easy</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back--1">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$297</p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book Now!</a>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-1-of-3">
-            <div class="card">card 2</div>
+            <div class="card">
+              <div class="card">
+                <div class="card__side card__side--front card__side--front--2">
+                  <div class="card__header-image card__header-image--2"></div>
+                  <h4 class="card__header-title">
+                    <span class="card__header-span card__header-span--2">The forest hiker</span>
+                  </h4>
+                  <div class="card__description">
+                    <ul>
+                      <li>7 day tour</li>
+                      <li>Up to 40 people</li>
+                      <li>6 tour guides</li>
+                      <li>Sleep in tents</li>
+                      <li>Difficulty: medium</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="card__side card__side--back card__side--back--2">
+                  <div class="card__cta">
+                    <div class="card__price-box">
+                      <p class="card__price-only">Only</p>
+                      <p class="card__price-value">$497</p>
+                    </div>
+                    <a href="#" class="btn btn--white">Book Now!</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-1-of-3">
-            <div class="card">card 3</div>
+            <div class="card">
+              <div class="card">
+                <div class="card__side card__side--front card__side--front--3">
+                  <div class="card__header-image card__header-image--3"></div>
+                  <h4 class="card__header-title">
+                    <span class="card__header-span card__header-span--3">The snow adventures</span>
+                  </h4>
+                  <div class="card__description">
+                    <ul>
+                      <li>5 day tour</li>
+                      <li>Up to 15 people</li>
+                      <li>3 tour guides</li>
+                      <li>Sleep in tents</li>
+                      <li>Difficulty: hard</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="card__side card__side--back card__side--back--3">
+                  <div class="card__cta">
+                    <div class="card__price-box">
+                      <p class="card__price-only">Only</p>
+                      <p class="card__price-value">$887</p>
+                    </div>
+                    <a href="#" class="btn btn--white">Book Now!</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
+        </div>
+        <div class="text-centered margin-top-large">
+          <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
     </main>
