add testimony section

--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
         </div>
       </section>
       <section class="section-tours">
+        <div class="text-centered margin-bottom-large">
+          <h2 class="secondary-title">Most popular tours</h2>
+        </div>
         <div class="row">
           <div class="col-1-of-3">
             <div class="card">
@@ -205,6 +208,50 @@
         </div>
         <div class="text-centered margin-top-large">
           <a href="#" class="btn btn--green">Discover all tours</a>
+        </div>
+      </section>
+      <section class="section-testimony">
+        <div class="bg-video">
+          <video autoplay muted loop class="bg-video__content">
+            <source src="./img/video.mp4" type="video/mp4" />
+            <source src="./img/video.webm" type="video/webm" />
+            Your browser does not support the video tag.
+          </video>
+        </div>
+
+        <div class="text-centered margin-bottom-large">
+          <h2 class="secondary-title">Helping people to be happy</h2>
+        </div>
+
+        <div class="testimony">
+          <figure class="testimony__figure">
+            <img src="./img/nat-8.jpg" alt="person image" class="testimony__image" />
+            <figcaption class="testimony__caption">Sophia Val</figcaption>
+          </figure>
+          <div class="testimony__text">
+            <h3 class="tertiary-title">I had the best time ever</h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam.
+            </p>
+          </div>
+        </div>
+
+        <div class="testimony">
+          <figure class="testimony__figure">
+            <img src="./img/nat-9.jpg" alt="person image" class="testimony__image" />
+            <figcaption class="testimony__caption">Sophia Val</figcaption>
+          </figure>
+          <div class="testimony__text">
+            <h3 class="tertiary-title">My life is better now</h3>
+            <p class="paragraph">
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat. Ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+              nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </div>
         </div>
       </section>
     </main>
